<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>arjansh.poc</groupId>
	<artifactId>docker-integration-test</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <dockerTomcatPort>8080</dockerTomcatPort>
	</properties>

	<build>
		<testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
        
		<plugins>
		    <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-compiler-plugin</artifactId>
		        <version>3.5.1</version>
		        <configuration>
		            <source>1.8</source>
		            <target>1.8</target>
		        </configuration>
		    </plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.10</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.19.1</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>io.fabric8</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.15.16</version>
				<configuration>
					<logDate>default</logDate>
					<autoPull>true</autoPull>
					<images>
						<image>
							<name>${project.artifactId}:${project.version}</name>
							<build>
								<from>tomcat:8.0</from>
			                    <assembly>
			                    	<basedir>/usr/local/tomcat/webapps</basedir>
			                    	<descriptorRef>artifact</descriptorRef>
			                    </assembly>
							</build>

							<run>
								<ports>
									<port>${dockerTomcatPort}:8080</port>
								</ports>
								<wait>
									<url>http://${docker.host.address}:${dockerTomcatPort}</url>
									<time>300000</time>
								</wait>
							</run>
						</image>
					</images>
				</configuration>
				
				<executions>
					<execution>
						<id>start</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>build</goal>
							<goal>start</goal>
						</goals>
					</execution>
					<execution>
						<id>stop</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>stop</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
        </plugins>
	</build>

	<dependencies>
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
